@startuml

title A) Database-agnostic DomainRepo at the top, specialised repos extend it and JpaRepo

note as noteA
    DomainRepo is database-agnostic
    and defines selected methods from JpaRepo

    E.g.: RoundRepository
end note

note as noteB
    SpecialisedRepos are Spring Data repositories
    in DB2 and Oracle versions.
    E.g.: Db2RoundRepository
            OracleRoundRepository
end note

interface DomainRepository
interface SpecialisedRepositoryA
interface SpecialisedRepositoryB
interface JpaRepository

noteA .. DomainRepository
noteB .. SpecialisedRepositoryA

DomainRepository <|-- SpecialisedRepositoryA
DomainRepository <|-- SpecialisedRepositoryB

JpaRepository <|-- SpecialisedRepositoryA
JpaRepository <|-- SpecialisedRepositoryB

@enduml


@startuml

title B) Domain Repo inherits from JpaRepo, specialised repos extend Domain Repo

interface DomainRepository
interface SpecialisedRepositoryA
interface SpecialisedRepositoryB
interface JpaRepository


JpaRepository <|-- DomainRepository

DomainRepository <|-- SpecialisedRepositoryA
DomainRepository <|-- SpecialisedRepositoryB

@enduml


@startuml

title C) No Domain Repo, specialised repos extend JpaRepo

interface SpecialisedRepositoryA
interface SpecialisedRepositoryB
interface JpaRepository


JpaRepository <|-- SpecialisedRepositoryA
JpaRepository <|-- SpecialisedRepositoryB

@enduml